--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,13 @@
   max-width: 100%;
 }
 
-.sigCanvas {
+/* .sigCanvas {
   width: 100%;
   height: auto;
+} */
+.sigCanvas {
+  border-radius: 4px;
+  display: block;
 }
 
 button {
